# AndroidNative

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/nativejni/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/base/: base.h  jvm.cpp  jvm.h
app/src/main/cpp/jni/: jni_access_field.cpp  jni_access_method.cpp  jni_basic_type.cpp  jni_bitmap.cpp  jni_constructor_class.cpp  jni_dynamic_load.cpp  jni_execption.cpp  jni_invoke_method.cpp  jni_reference_type.cpp  jni_string_type.cpp  jni_thread.cpp  jni_wait_notify.cpp
app/src/main/java/com/nativejni/: Animal.java  BitmapActivity.java  MainActivity.java
app/src/main/java/com/nativejni/interfaces/: ICallbackMethod.java  IThreadCallback.java
app/src/main/java/com/nativejni/jni/: JNIAccessField.java  JNIAccessMethod.java  JNIBasicType.java  JNIBitmap.java  JNIConstructorClass.java  JNIDynamicLoad.java  JNIException.java  JNIInvokeMethod.java  JNIReferenceType.java  JNIString.java  JNIStringType.java  JNIThread.java  JNIWaitNotify.java
app/src/main/res/layout/: activity_bitmap.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/nativejni/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
